# the-ray-tracer-challenge-python

./: .gitattributes  .gitignore  .pylintrc  README.md  color.py  pyproject.toml  tuples.py  utilities.py
.github/workflows/: build-and-test.yml
ray-tracer/: tuples.py
ray_tracer_challenge/: canvas.py  color.py  projectile.py  tuples.py  utilities.py
tests/: test_canvas.py  test_color.py  test_tuples.py
