[tool.poetry]
name = "ray-tracer-challenge"
version = "0.1.0"
description = "Implementation of the ray tracer in *The Ray Tracer Challenge* book"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.7.1"
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
